# django-svelte-splitted

backend/: pyproject.toml  run_lint.sh
backend/backend/: settings.py
backend/service/: graphql.py  settings.py  urls.py  wsgi.py
backend/service/account/: admin.py  apps.py  models.py  tests.py
backend/service/account/graphql/: mutations.py  queries.py  types.py
backend/service/account/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
