[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonathan Alberth Quispe Fuentes <qf.jonathan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-extensions = "^3.1.5"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100
skip-string-normalization=true
target-version=['py39']

[flake8]
max-line-length=100
